# Mneme

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
examples/data/: _make_classification.py  create_csv_large_scale.py  create_ds.sh
examples/scripts/: dask_main.py  hpo_optuna.py  main.py  polars_main.py  run.sh  spark_main.py
src/Mneme/: __init__.py  _mneme_logging.py  blockreader.py
src/Mneme/preprocessing/: __init__.py  parallelimputer.py  parallellabelencoder.py  parallelmaxabsscaler.py  parallelminmaxscaler.py  parallelonehotencoder.py  parallelordinalencoder.py  parallelpreprocessor.py  parallelrobustscaler.py  parallelstandardscaler.py
src/Mneme/utils/: __init__.py  utils_.py  utils_imputer.py  utils_labelencoder.py  utils_maxabsscaler.py  utils_minmaxscaler.py  utils_onehotencoder.py  utils_ordinalencoder.py  utils_robustscaler.py  utils_standardscaler.py
tests/: test_blockreader.py  test_parimputer.py  test_parpreprocessor.py
tests/data/: sample_data.csv
