[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Mneme"
version = "0.1.0"
authors = [
    {name = "Sofotasios Argiris", email = "a.sofotasios@ceid.upatras.gr"},
    {name = "Metaxakis Dimitris", email = "d.metaxakis@ceid.upatras.gr"},
    {name = "Hadjidoukas Panagiotis", email = "phadjido@ceid.upatras.gr"}
]
maintainers = [
    {name = "Sofotasios Argiris", email = "a.sofotasios@ceid.upatras.gr"},
    {name = "Metaxakis Dimitris", email = "d.metaxakis@ceid.upatras.gr"}
]
description = "A parallel framework for high-performance out-of-core preprocessing of large tabular datasets on single-node systems"
readme = { file = "README.md", content-type = "text/markdown" }
keywords = ["parallel processing", "data preprocessing", "large tabular data", "machine learning", "HPC"]
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = [
    "exceptiongroup",
    "iniconfig",
    "joblib",
    "numpy",
    "packaging",
    "pandas",
    "pluggy",
    "polars == 1.9.0",
    "pytest",
    "python-dateutil",
    "pytz",
    "scikit-learn",
    "scipy",
    "six",
    "threadpoolctl",
    "tomli",
    "tzdata"
]

[project.urls]
Homepage = "https://github.com/CEID-HPCLAB/Mneme"

[tool.setuptools]
packages = { find = { where = ["src"] } }